--- a/server/static/main.css
+++ b/server/static/main.css
@@ -18,7 +18,6 @@ html {
 
 body {
     font-size: 1rem;
-    /*font-family: sans-serif;*/
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     margin: 0;
     padding: 0;
@@ -523,7 +522,7 @@ a:visited {
 }
 
 .edit-button {
-    /*width: ;*/
+    width: 80%;
     margin: 4px auto auto;
     font-size: 0.8rem;
     text-align: right;
