--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -4,15 +4,14 @@
 {% block extra_header %}
 <div class="header-inner">
     <!-- Trigger link -->
-    <a href="#" id="menuLink">Chat <span class="chevron-down"></span></a>
+    <a href="#" id="menuLink">Chat<span>&nbsp;</span><span class="chevron-down"></span></a>
 
     <!-- Hidden menu -->
     <div id="menu" class="hidden">
-        More modes are coming.<br>
-        Please stay patient.
-<!--      <a href="#" disabled="true">Chat</a>-->
-<!--      <a href="#" disabled="true">Collection A</a>-->
-<!--      <a href="#" disabled="true">Collection B</a>-->
+        More modes are coming.
+        <hr>
+        <a href="#" class="mode-button" id="mode-chat">Chat</a>
+        <a href="#" class="mode-button" id="mode-stackexchange">Stackexchange</a>
     </div>
 
 </div>
