--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -90,3 +90,4 @@
 {% include 'common/popups/help.html' %}
 {% include 'common/popups/settings.html' %}
 {% include 'common/popups/upload.html' %}
+{% include 'common/popups/generic.html' %}
