make space, remove todos from main screen sidebar->help

--- a/server/templates/common/popups/help.html
+++ b/server/templates/common/popups/help.html
@@ -10,14 +10,15 @@
                 </div>
 
                 <div>
-                    <h1>Coming up next</h1>
-                    <ul>
-                        <li>Semantic search for single document (i.e. ask your PDF)</li>
-                        <li>Finetuning models</li>
-                        <li>Semantic search for many documents (i.e. ask all your documents)</li>
-                        <li>Source code search (i.e. ask your code)</li>
-                        <li>More models</li>
-                    </ul>
+                    <div id="todos-div">
+                        <strong>Todos</strong>
+                        <ul>
+                            <li>Collections (LLM Search Engine - RAG)</li>
+                            <li>Rename history items with the help of the LLM</li>
+                            <li>Image understanding</li>
+                            <li>Up and down buttons, so a RLHF dataset can be created</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
