--- a/server/static/main.css
+++ b/server/static/main.css
@@ -507,7 +507,7 @@ a:visited {
     /*border-bottom: 1px solid white;*/
     /*padding-top: 32px;*/
     /*padding-bottom: 32px;*/
-    max-height: calc(100vh - 300px);
+    height: calc(100vh - 200px);
     /*border: 1px solid rebeccapurple;*/
     overflow-y: auto;
 }
