--- a/server/templates/common/popups/settings.html
+++ b/server/templates/common/popups/settings.html
@@ -10,7 +10,7 @@
             <form id="settings-form" class="popup-form">
                 <div>
                     <label for="n_predict">n_predict:</label>
-                    <input type="number" id="n_predict" name="n_predict" value="1024"><br>
+                    <input type="number" id="n_predict" name="n_predict" value="{{n_predict}}"><br>
                 </div>
                 <div class="param-help">
                     Set the number of tokens to predict when generating text. Note: May exceed the set limit slightly if the last token is a partial multibyte character. When 0, no tokens will be generated but the prompt is evaluated into the cache. (default: 1024, -1 = infinity).
@@ -24,14 +24,14 @@
 <!--                </div>-->
                 <div>
                     <label for="temperature">Temperature:</label>
-                    <input type="number" id="temperature" name="temperature" step="0.01" value="0.7"><br>
+                    <input type="number" id="temperature" name="temperature" step="0.01" value="{{temperature}}"><br>
                 </div>
                 <div class="param-help">
                     Adjust the randomness of the generated text
                 </div>
                 <div>
                     <label for="min_p">Min p:</label>
-                    <input type="number" id="min_p" name="min_p" step="0.05" value="0.1"><br>
+                    <input type="number" id="min_p" name="min_p" step="0.05" value="{{min_p}}"><br>
                 </div>
                 <div class="param-help">
                     The minimum probability for a token to be considered, relative to the probability of the most likely token
@@ -39,7 +39,7 @@
                 <!-- Array of Strings -->
                 <div>
                     <label for="stop">Stop:</label>
-                    <input type="text" id="stop" name="stop" value="</s>,Llama:,User:"><br>
+                    <input type="text" id="stop" name="stop" value="{{stop}}"><br>
                 </div>
                 <div class="param-help">
                     Specify a JSON array of stopping strings. These words will not be included in the completion, so make sure to add them to the prompt for the next iteration (default: []).
@@ -47,28 +47,28 @@
                 <!-- More Numerical Settings -->
                 <div>
                     <label for="repeat_last_n">Repeat Last N:</label>
-                    <input type="number" id="repeat_last_n" name="repeat_last_n" value="64"><br>
+                    <input type="number" id="repeat_last_n" name="repeat_last_n" value="{{repeat_last_n}}"><br>
                 </div>
                 <div class="param-help">
                     Last n tokens to consider for penalizing repetition (default: 64, 0 = disabled, -1 = ctx-size)
                 </div>
                 <div>
                     <label for="repeat_penalty">Repeat Penalty:</label>
-                    <input type="number" id="repeat_penalty" name="repeat_penalty" step="0.01" value="1.1"><br>
+                    <input type="number" id="repeat_penalty" name="repeat_penalty" step="0.01" value="{{repeat_penalty}}"><br>
                 </div>
                 <div class="param-help">
                     Control the repetition of token sequences in the generated text (default: 1.1)
                 </div>
                 <div>
                     <label for="top_k">Top K:</label>
-                    <input type="number" id="top_k" name="top_k" value="40"><br>
+                    <input type="number" id="top_k" name="top_k" value="{{top_k}}"><br>
                 </div>
                 <div class="param-help">
                     Limit the next token selection to the K most probable tokens (default: 40).
                 </div>
                 <div>
                     <label for="top_p">Top P:</label>
-                    <input type="number" id="top_p" name="top_p" step="0.01" value="0.9"><br>
+                    <input type="number" id="top_p" name="top_p" step="0.01" value="{{top_p}}"><br>
                 </div>
                 <div class="param-help">
                     Limit the next token selection to a subset of tokens with a cumulative probability above a threshold P (default: 0.9).
@@ -145,28 +145,28 @@
                 </div>
                 <div>
                     <label for="mirostat">Mirostat:</label>
-                    <input type="number" id="mirostat" name="mirostat" value="0"><br>
+                    <input type="number" id="mirostat" name="mirostat" value="{{mirostat}}"><br>
                 </div>
                 <div class="param-help">
                     Enable Mirostat sampling, controlling perplexity during text generation (default: 0, 0 = disabled, 1 = Mirostat, 2 = Mirostat 2.0).
                 </div>
                 <div>
                     <label for="mirostat_tau">Mirostat Tau:</label>
-                    <input type="number" id="mirostat_tau" name="mirostat_tau" step="0.01" value="5"><br>
+                    <input type="number" id="mirostat_tau" name="mirostat_tau" step="0.01" value="{{mirostat_tau}}"><br>
                 </div>
                 <div class="param-help">
                     Set the Mirostat target entropy, parameter tau (default: 5.0).
                 </div>
                 <div>
                     <label for="mirostat_eta">Mirostat Eta:</label>
-                    <input type="number" id="mirostat_eta" name="mirostat_eta" step="0.01" value="0.1"><br>
+                    <input type="number" id="mirostat_eta" name="mirostat_eta" step="0.01" value="{{mirostat_eta}}"><br>
                 </div>
                 <div class="param-help">
                     Set the Mirostat learning rate, parameter eta (default: 0.1).
                 </div>
                 <div>
                     <label for="grammar">Grammar:</label>
-                    <textarea id="grammar" name="grammar" rows="4" cols="50"></textarea>
+                    <textarea id="grammar" name="grammar" rows="4" cols="{{grammar}}"></textarea>
                 </div>
                 <div class="param-help">
                     Set grammar for grammar-based sampling (default: no grammar)
