--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -51,6 +51,7 @@
         <div>Chat here</div>
     </div>
     <div class="chat-input">
+        <button id="record"><i class="gg-mic"></i></button>
         <div id="input-box" class="input-box" contenteditable="true" data-text="Type here..."></div>
         <button id="stop-generating" disabled="disabled">
             Stop generating
