--- a/server/static/main.css
+++ b/server/static/main.css
@@ -1005,3 +1005,27 @@ input[type="number"]::-webkit-outer-spin-button {
     box-shadow: 0 2px 0,
     inset -2px 0 0
 }
+
+#record {
+    border: none;
+    background-color: unset;
+    height: 32px;
+    width: 32px;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 4px;
+    left: calc(10% - 40px);
+}
+#record:disabled {
+    display: block;
+    opacity: 0.5;
+}
+
+.recording {
+    color: red;
+}
+
+#record > i {
+    margin: auto;
+}
